# neuro-pipeline

./: .gitignore  .gitmodules  CMakeLists.txt  Config.h.in  README.md
Forms/: MainWindow.ui  OpenPipelineDialog.ui
Include/: Config.h  Experiment.h  Files.h  MainWindow.h  NeuroPipeline.h  NeuroPipelineConfig.h  Pipeline.h  Robot.h
Include/Py/: PyModule.h  PythonWrapper.h
Include/UI/: LoadPipelineDialog.h  MainWindow.h  OpenPipelineDialog.h  SavePipelineDialog.h
Include/Utils/: FileTypes.h
Resources/: Config.h.in  neuro_config.np
Resources/Experiment_01/: test.pipe  test2.pipe  test3.pipe  test_3423.pipe
Resources/Experiment_02/: Experiment_02.expr
Source/: Experiment.cpp  Files.cpp  NeuroPipeline.cpp  main.cpp
Source/UI/: LoadPipelineDialog.cpp  MainWindow.cpp  OpenPipelineDialog.cpp  SavePipelineDialog.cpp
